jipsy-tests/src/test/resources/invalid/EnumTestClass.java
import java.util.RandomAccess;

import org.kordamp.jipsy.ServiceProviderFor;

@ServiceProviderFor(RandomAccess.class)
public enum EnumTestClass implements RandomAccess {
	
}
